XW-4088 | fix for FV on scroll behaviour when smartbanner is visible

--- a/app/styles/_wikia-variables.scss
+++ b/app/styles/_wikia-variables.scss
@@ -96,6 +96,7 @@ $vertical-colors: (
 // Smart banner
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 $smart-banner-android-height: rem-calc(66);
+$fandom-app-smart-banner-height: 85px;
 
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 // Site head
